[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/uipanel.png" type="Texture" id=1]
[ext_resource path="res://UI/fonts/THSarabunNew.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/MainUIButton.gd" type="Script" id=3]

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1600, 400 )
modulate_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1600, 400 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1600, 400 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1600, 400 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1600, 400 )

[sub_resource type="DynamicFont" id=12]
size = 10
font_data = ExtResource( 2 )

[node name="MainUIButton" type="Node2D"]
script = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
margin_right = 88.0
margin_bottom = 14.0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "   Letters"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
